// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with 0 expenses 1`] = `
<div>
  <h1>
    Vieving 0 expenses totalling $0.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly with 1 expense 1`] = `
<div>
  <h1>
    Vieving 1 expense totalling $1.23
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h1>
    Vieving 3 expenses totalling $111,222,333.44
  </h1>
</div>
`;
